# lif

./: .gitignore  ARCHITECTURE.md  LGN_max_firing_distribution.md  README.md  dashboard_filters.py  dashboard_lgn.py  lif.py  lif.sublime-project  lif.sublime-workspace  pyproject.toml  pyrightconfig.json  rf_stim.py
docs/: mkdocs.yml
docs/docs/: ARCHITECTURE.md  stimulus.md
docs/site/: lif.html
html/lif/: index.html  lif.html  lif_utils.html  rf_stim.html
lif/: __init__.py  convolve.py  dashboard_filters.py  lgn_model_proto_nb.py  lgn_ori_biases_nb.py  lgn_poisson_nb.py  lif.py  lif_utils.py  poisson_test_nb.py  requirements.txt  v1_lif_nb.py
lif/analysis/: analysis.py  base_analyse_script.py  base_script.py  circ_stat.py  test.py
lif/convolution/: convolve.py  correction.py  estimate_real_amp_from_f1.py  soodak_rf.py
lif/experiments/: base_v1_firing_exp.py  base_v1_firing_params.py  base_v1_firing_rate.py  base_v1_firing_rate_exp_1.py  base_v1_firing_rate_exp_2.py  base_v1_firing_rate_exp_3.py  dashboard_results.py  exp_base.py  exp_base_analytical.py  exp_base_analytical_mp_proto.py  exp_spat_freq_ori_tune_rat_1_circ_var_0.py  log_test.py  new_exp_prototype.py  ori_tuning_cv_ratio_sf_1.py  ori_tuning_ratio_1.py  ori_tuning_ratio_2.py  ori_tuning_ratio_3.py  ori_tuning_ratio_4.py  ori_tuning_ratio_5.py  ori_tuning_ratio_6.py  (+5 more)
nb_archive/: lgn_model_proto_nb.py  rf_stim.py  v1_lif_nb.py
test/: test_convolution.py
tests/: pytest.ini  test_convolution.py  test_filter_creation.py  test_lgn.py  test_receptive_field.py  test_stimulus.py  test_utils.py
(+328 files in other folders)
